typo(source): Remove trendmarks.
Remove trendmarks to obey the BSD 3-clause License from Z CAM.

Signed-off-by: Yibai Zhang <xm1994@gmail.com>

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,5 +1,5 @@
 SSPPlugin.Default="Default"
-SSPPlugin.SSPSourceName="Z CAM™ SSP Source"
+SSPPlugin.SSPSourceName="SSP Source"
 SSPPlugin.SourceProps.SourceIp="Source IP"
 SSPPlugin.SourceProps.Custom="Custom"
 SSPPlugin.SourceProps.NotFound="Device Not Found"
