fix typo in Latency Mode

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -7,6 +7,6 @@ SSPPlugin.SourceProps.Sync="Sync"
 SSPPlugin.SyncMode.Internal="Internal"
 SSPPlugin.SyncMode.SSPTimestamp="SSP Protocol"
 SSPPlugin.SourceProps.HWAccel="Hardware Acceleration"
-SSPPlugin.SourceProps.Latency="Lantancy Mode"
+SSPPlugin.SourceProps.Latency="Latency Mode"
 SSPPlugin.SourceProps.Latency.Normal="Normal"
 SSPPlugin.SourceProps.Latency.Low="Low"
